TDI-36474: Remove dublication and add right handling for writer close()